Added first tests;